--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,13 +5,10 @@
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
+    "types": ["node"],
+    "rootDir": "./src",
     "outDir": "dist"
   },
-  "include": [
-    "src/**/*",
-    "prisma/**/*.ts"
-  ],
-  "ts-node": {
-    "transpileOnly": true
-  }
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "prisma"]
 }
